-------------------------------------------------------------------------------------------------------
Release notes version 1.8.1_beta : Enhancements, modifications and corrected bugs since version 1.8.0 :
-------------------------------------------------------------------------------------------------------
19/05/20 (TRUST)  Portability : Latest OpenMPI version downloaded by "./configure -force_latest_openmpi" bumped from 2.13 to 4.0.3
19/05/20 (TRUST)  Bug fixed   : Allow different beginning/ending times for statistics and fix bug in case of resumption whith statistics
12/05/20 (TRUST)  Portability : Ubuntu version 19-20 OS are now supported
05/05/20 (TRUST)  Tools       : ICoCo tutorial updated ($TRUST_ROOT/doc/TRUST/ICoCo_tutorial.pdf)
05/05/20 (TRUST)  Keyword     : Simplify Source_generique keyword syntax when giving an analytical expression without field (source refChamp useless) 
04/05/20 (TRUST)  Portability : Centos 6.4, Fedora 20 and GNU version compiler older than 4.8.5 are not supported anymore
01/05/20 (TRUST)  Tools       : Update PETSc to 3.12.2 version + fix build with OpenMPI 4.x + add ML the multilevel preconditionning package from Trilinos
01/05/20 (TRUST)  New keyword : New keyword Polyedriser to convert a VDF mesh (Quadrangle/Hexaedre) to a PolyMAC mesh (Polyedre)
01/05/20 (TRUST)  Bug fixed   : Regression when post processing y+ with null value on boundaries in VDF
01/04/20 (TRUST)  Tools       : VisIt updated to 3.1.1 version for recent Linux (Fedora 27-30, Ubuntu 18, Debian 9-10)
01/04/20 (TRUST)  Tools       : Update PETSc to 3.12.2 version + fix build with OpenMPI 4.x + add ML the multilevel preconditionning package from Trilinos
29/04/20 (TRUST)  Keyword     : New PolyMAC/VEF keyword Terme_puissance_thermique_echange_impose to set a thermal source term P=h(T-Text)
29/04/20 (TRUST)  Keyword     : New PolyMAC/VEF/VDF option regul for Perte_Charge_Singuliere keyword (singular pressure loss) to compute K according to a target flow rate