@@ -39,6 +39,7 @@
 #include <Champ_front_Tabule.h>
 #include <Champ_front_bruite.h>
 #include <Champ_front_calc.h>
+#include <Champ_front_calc_interne.h>
 #include <Champ_front_debit.h>
 #include <Champ_front_debit_massique.h>
 #include <Champ_front_fonc.h>
@@ -96,21 +97,22 @@ Champ_Uniforme_Morceaux_Tabule_Temps inst35;verifie_pere(inst35);
 Champ_front_Tabule inst36;verifie_pere(inst36);
 Champ_front_bruite inst37;verifie_pere(inst37);
 Champ_front_calc inst38;verifie_pere(inst38);
-Champ_front_debit inst39;verifie_pere(inst39);
-Champ_front_debit_massique inst40;verifie_pere(inst40);
-Champ_front_fonc inst41;verifie_pere(inst41);
-Champ_front_fonc_gradient inst42;verifie_pere(inst42);
-Champ_front_fonc_pois_ipsn inst43;verifie_pere(inst43);
-Champ_front_fonc_pois_tube inst44;verifie_pere(inst44);
-Champ_front_lu inst45;verifie_pere(inst45);
-Champ_front_normal inst46;verifie_pere(inst46);
-Champ_front_t inst47;verifie_pere(inst47);
-Champ_front_tangentiel inst48;verifie_pere(inst48);
-Champ_front_txyz inst49;verifie_pere(inst49);
-Champ_front_uniforme inst50;verifie_pere(inst50);
-Champ_front_xyz_debit inst51;verifie_pere(inst51);
-Champ_input_P0 inst52;verifie_pere(inst52);
-Init_par_partie inst53;verifie_pere(inst53);
-Tayl_Green inst54;verifie_pere(inst54);
-champ_init_canal_sinal inst55;verifie_pere(inst55);
+Champ_front_calc_interne inst39;verifie_pere(inst39);
+Champ_front_debit inst40;verifie_pere(inst40);
+Champ_front_debit_massique inst41;verifie_pere(inst41);
+Champ_front_fonc inst42;verifie_pere(inst42);
+Champ_front_fonc_gradient inst43;verifie_pere(inst43);
+Champ_front_fonc_pois_ipsn inst44;verifie_pere(inst44);
+Champ_front_fonc_pois_tube inst45;verifie_pere(inst45);
+Champ_front_lu inst46;verifie_pere(inst46);
+Champ_front_normal inst47;verifie_pere(inst47);
+Champ_front_t inst48;verifie_pere(inst48);
+Champ_front_tangentiel inst49;verifie_pere(inst49);
+Champ_front_txyz inst50;verifie_pere(inst50);
+Champ_front_uniforme inst51;verifie_pere(inst51);
+Champ_front_xyz_debit inst52;verifie_pere(inst52);
+Champ_input_P0 inst53;verifie_pere(inst53);
+Init_par_partie inst54;verifie_pere(inst54);
+Tayl_Green inst55;verifie_pere(inst55);
+champ_init_canal_sinal inst56;verifie_pere(inst56);
 }
