@@ -18,6 +18,7 @@
 #include <Discretiser_domaine.h>
 #include <Distanceparoi.h>
 #include <Domaine.h>
+#include <DomaineAxi1d.h>
 #include <DomaineCutter.h>
 #include <Domaine_bord.h>
 #include <Elem_geom.h>
@@ -80,6 +81,7 @@
 #include <Rotation.h>
 #include <Scatter.h>
 #include <Segment.h>
+#include <Segment_axi.h>
 #include <Sous_Zone.h>
 #include <SupprimeBord.h>
 #include <Tetraedre.h>
@@ -116,85 +118,87 @@ Dimension inst12;verifie_pere(inst12);
 Discretiser_domaine inst13;verifie_pere(inst13);
 Distanceparoi inst14;verifie_pere(inst14);
 Domaine inst15;verifie_pere(inst15);
-DomaineCutter inst16;verifie_pere(inst16);
-Domaine_bord inst17;verifie_pere(inst17);
-Elem_geom inst18;verifie_pere(inst18);
-Extraire_domaine inst19;verifie_pere(inst19);
-Extraire_plan inst20;verifie_pere(inst20);
-Extraire_surface inst21;verifie_pere(inst21);
-ExtrudeBord inst22;verifie_pere(inst22);
-ExtrudeParoi inst23;verifie_pere(inst23);
-Extruder inst24;verifie_pere(inst24);
-Extruder_en20 inst25;verifie_pere(inst25);
-Extruder_en3 inst26;verifie_pere(inst26);
-Faces inst27;verifie_pere(inst27);
-Faces_Interne inst28;verifie_pere(inst28);
-Faces_Internes inst29;verifie_pere(inst29);
-Hexaedre inst30;verifie_pere(inst30);
-Hexaedre_VEF inst31;verifie_pere(inst31);
-Hexaedre_axi inst32;verifie_pere(inst32);
-Imprimer_flux inst33;verifie_pere(inst33);
-Imprimer_flux_sum inst34;verifie_pere(inst34);
-Joint inst35;verifie_pere(inst35);
-Joints inst36;verifie_pere(inst36);
-Lire_Ideas inst37;verifie_pere(inst37);
-Lire_Tgrid inst38;verifie_pere(inst38);
-Mailler inst39;verifie_pere(inst39);
-MaillerParallel inst40;verifie_pere(inst40);
-Modif_bord_to_raccord inst41;verifie_pere(inst41);
-NettoieNoeuds inst42;verifie_pere(inst42);
-OctreeRoot inst43;verifie_pere(inst43);
-OrienteFacesBord inst44;verifie_pere(inst44);
-Orienter_Simplexes inst45;verifie_pere(inst45);
-Pave inst46;verifie_pere(inst46);
-Periodique inst47;verifie_pere(inst47);
-Point inst48;verifie_pere(inst48);
-Polyedre inst49;verifie_pere(inst49);
-Polyedriser inst50;verifie_pere(inst50);
-Polygone inst51;verifie_pere(inst51);
-Postraiter_domaine inst52;verifie_pere(inst52);
-PrecisionGeom inst53;verifie_pere(inst53);
-Prisme inst54;verifie_pere(inst54);
-Quadrangle_VEF inst55;verifie_pere(inst55);
-Raccord inst56;verifie_pere(inst56);
-Raccord_local_homogene inst57;verifie_pere(inst57);
-Raccord_distant_homogene inst58;verifie_pere(inst58);
-Raccords inst59;verifie_pere(inst59);
-Raffiner_Simplexes inst60;verifie_pere(inst60);
-Raffiner_anisotrope inst61;verifie_pere(inst61);
-Raffiner_isotrope_parallele inst62;verifie_pere(inst62);
-Rectangle inst63;verifie_pere(inst63);
-Rectangle_2D_axi inst64;verifie_pere(inst64);
-Rectangle_axi inst65;verifie_pere(inst65);
-Rectify_Mesh inst66;verifie_pere(inst66);
-Redresser_hexaedres_vdf inst67;verifie_pere(inst67);
-Refine_Mesh inst68;verifie_pere(inst68);
-RegroupeBord inst69;verifie_pere(inst69);
-Remove_Invalid_Internal_Boundaries inst70;verifie_pere(inst70);
-Remove_elem inst71;verifie_pere(inst71);
-Reordonner inst72;verifie_pere(inst72);
-Reorienter_tetraedres inst73;verifie_pere(inst73);
-Reorienter_triangles inst74;verifie_pere(inst74);
-Rotation inst75;verifie_pere(inst75);
-Scatter inst76;verifie_pere(inst76);
-Segment inst77;verifie_pere(inst77);
-Sous_Zone inst78;verifie_pere(inst78);
-SupprimeBord inst79;verifie_pere(inst79);
-Tetraedre inst80;verifie_pere(inst80);
-Tetraedriser inst81;verifie_pere(inst81);
-Tetraedriser_homogene inst82;verifie_pere(inst82);
-Tetraedriser_homogene_compact inst83;verifie_pere(inst83);
-Tetraedriser_homogene_fin inst84;verifie_pere(inst84);
-Tetraedriser_par_prisme inst85;verifie_pere(inst85);
-Transformer inst86;verifie_pere(inst86);
-Triangle inst87;verifie_pere(inst87);
-Trianguler inst88;verifie_pere(inst88);
-Trianguler_H inst89;verifie_pere(inst89);
-Trianguler_fin inst90;verifie_pere(inst90);
-TroisDto2D inst91;verifie_pere(inst91);
-TroisDto2Daxi inst92;verifie_pere(inst92);
-Verifier_Qualite_Raffinements inst93;verifie_pere(inst93);
-Verifier_Simplexes inst94;verifie_pere(inst94);
-Zone inst95;verifie_pere(inst95);
-Zones inst96;verifie_pere(inst96);
+DomaineAxi1d inst16;verifie_pere(inst16);
+DomaineCutter inst17;verifie_pere(inst17);
+Domaine_bord inst18;verifie_pere(inst18);
+Elem_geom inst19;verifie_pere(inst19);
+Extraire_domaine inst20;verifie_pere(inst20);
+Extraire_plan inst21;verifie_pere(inst21);
+Extraire_surface inst22;verifie_pere(inst22);
+ExtrudeBord inst23;verifie_pere(inst23);
+ExtrudeParoi inst24;verifie_pere(inst24);
+Extruder inst25;verifie_pere(inst25);
+Extruder_en20 inst26;verifie_pere(inst26);
+Extruder_en3 inst27;verifie_pere(inst27);
+Faces inst28;verifie_pere(inst28);
+Faces_Interne inst29;verifie_pere(inst29);
+Faces_Internes inst30;verifie_pere(inst30);
+Hexaedre inst31;verifie_pere(inst31);
+Hexaedre_VEF inst32;verifie_pere(inst32);
+Hexaedre_axi inst33;verifie_pere(inst33);
+Imprimer_flux inst34;verifie_pere(inst34);
+Imprimer_flux_sum inst35;verifie_pere(inst35);
+Joint inst36;verifie_pere(inst36);
+Joints inst37;verifie_pere(inst37);
+Lire_Ideas inst38;verifie_pere(inst38);
+Lire_Tgrid inst39;verifie_pere(inst39);
+Mailler inst40;verifie_pere(inst40);
+MaillerParallel inst41;verifie_pere(inst41);
+Modif_bord_to_raccord inst42;verifie_pere(inst42);
+NettoieNoeuds inst43;verifie_pere(inst43);
+OctreeRoot inst44;verifie_pere(inst44);
+OrienteFacesBord inst45;verifie_pere(inst45);
+Orienter_Simplexes inst46;verifie_pere(inst46);
+Pave inst47;verifie_pere(inst47);
+Periodique inst48;verifie_pere(inst48);
+Point inst49;verifie_pere(inst49);
+Polyedre inst50;verifie_pere(inst50);
+Polyedriser inst51;verifie_pere(inst51);
+Polygone inst52;verifie_pere(inst52);
+Postraiter_domaine inst53;verifie_pere(inst53);
+PrecisionGeom inst54;verifie_pere(inst54);
+Prisme inst55;verifie_pere(inst55);
+Quadrangle_VEF inst56;verifie_pere(inst56);
+Raccord inst57;verifie_pere(inst57);
+Raccord_local_homogene inst58;verifie_pere(inst58);
+Raccord_distant_homogene inst59;verifie_pere(inst59);
+Raccords inst60;verifie_pere(inst60);
+Raffiner_Simplexes inst61;verifie_pere(inst61);
+Raffiner_anisotrope inst62;verifie_pere(inst62);
+Raffiner_isotrope_parallele inst63;verifie_pere(inst63);
+Rectangle inst64;verifie_pere(inst64);
+Rectangle_2D_axi inst65;verifie_pere(inst65);
+Rectangle_axi inst66;verifie_pere(inst66);
+Rectify_Mesh inst67;verifie_pere(inst67);
+Redresser_hexaedres_vdf inst68;verifie_pere(inst68);
+Refine_Mesh inst69;verifie_pere(inst69);
+RegroupeBord inst70;verifie_pere(inst70);
+Remove_Invalid_Internal_Boundaries inst71;verifie_pere(inst71);
+Remove_elem inst72;verifie_pere(inst72);
+Reordonner inst73;verifie_pere(inst73);
+Reorienter_tetraedres inst74;verifie_pere(inst74);
+Reorienter_triangles inst75;verifie_pere(inst75);
+Rotation inst76;verifie_pere(inst76);
+Scatter inst77;verifie_pere(inst77);
+Segment inst78;verifie_pere(inst78);
+Segment_axi inst79;verifie_pere(inst79);
+Sous_Zone inst80;verifie_pere(inst80);
+SupprimeBord inst81;verifie_pere(inst81);
+Tetraedre inst82;verifie_pere(inst82);
+Tetraedriser inst83;verifie_pere(inst83);
+Tetraedriser_homogene inst84;verifie_pere(inst84);
+Tetraedriser_homogene_compact inst85;verifie_pere(inst85);
+Tetraedriser_homogene_fin inst86;verifie_pere(inst86);
+Tetraedriser_par_prisme inst87;verifie_pere(inst87);
+Transformer inst88;verifie_pere(inst88);
+Triangle inst89;verifie_pere(inst89);
+Trianguler inst90;verifie_pere(inst90);
+Trianguler_H inst91;verifie_pere(inst91);
+Trianguler_fin inst92;verifie_pere(inst92);
+TroisDto2D inst93;verifie_pere(inst93);
+TroisDto2Daxi inst94;verifie_pere(inst94);
+Verifier_Qualite_Raffinements inst95;verifie_pere(inst95);
+Verifier_Simplexes inst96;verifie_pere(inst96);
+Zone inst97;verifie_pere(inst97);
+Zones inst98;verifie_pere(inst98);
 }
