@@ -4,6 +4,7 @@
 //
 #include <verifie_pere.h>
 #include <Champ_Fonc_MED.h>
+#include <Champ_Fonc_MED_Table_Temps.h>
 #include <Champ_Fonc_MED_Tabule.h>
 #include <Champ_Fonc_P0_MED.h>
 #include <Champ_Fonc_P1_MED.h>
@@ -27,25 +28,26 @@ void instancie_src_Kernel_MEDimpl() {
 Cerr << "src_Kernel_MEDimpl" << finl;
 Champ_Fonc_MED inst1;verifie_pere(inst1);
 Champ_Fonc_MEDfile inst2;verifie_pere(inst2);
-Champ_Fonc_MED_Tabule inst3;verifie_pere(inst3);
-Champ_Fonc_P0_MED inst4;verifie_pere(inst4);
-Champ_Fonc_P1_MED inst5;verifie_pere(inst5);
-Champ_Fonc_Q1_MED inst6;verifie_pere(inst6);
-Champ_front_MED inst7;verifie_pere(inst7);
-Discr_inst inst8;verifie_pere(inst8);
-EcrMED inst9;verifie_pere(inst9);
-EcrMEDfile inst10;verifie_pere(inst10);
-Ecrire_Champ_MED inst11;verifie_pere(inst11);
-Format_Post_Med inst12;verifie_pere(inst12);
-Format_Post_Med_major inst13;verifie_pere(inst13);
-Format_Post_Medfile inst14;verifie_pere(inst14);
-Integrer_champ_med inst15;verifie_pere(inst15);
-LataToMED inst16;verifie_pere(inst16);
-latatoother inst17;verifie_pere(inst17);
-LireMED inst18;verifie_pere(inst18);
-LireMEDfile inst19;verifie_pere(inst19);
-Pb_MED inst20;verifie_pere(inst20);
-Pbc_MED inst21;verifie_pere(inst21);
-Read_MED_For_Testing_No_Verify_Option inst22;verifie_pere(inst22);
-ScatterMED inst23;verifie_pere(inst23);
+Champ_Fonc_MED_Table_Temps inst3;verifie_pere(inst3);
+Champ_Fonc_MED_Tabule inst4;verifie_pere(inst4);
+Champ_Fonc_P0_MED inst5;verifie_pere(inst5);
+Champ_Fonc_P1_MED inst6;verifie_pere(inst6);
+Champ_Fonc_Q1_MED inst7;verifie_pere(inst7);
+Champ_front_MED inst8;verifie_pere(inst8);
+Discr_inst inst9;verifie_pere(inst9);
+EcrMED inst10;verifie_pere(inst10);
+EcrMEDfile inst11;verifie_pere(inst11);
+Ecrire_Champ_MED inst12;verifie_pere(inst12);
+Format_Post_Med inst13;verifie_pere(inst13);
+Format_Post_Med_major inst14;verifie_pere(inst14);
+Format_Post_Medfile inst15;verifie_pere(inst15);
+Integrer_champ_med inst16;verifie_pere(inst16);
+LataToMED inst17;verifie_pere(inst17);
+latatoother inst18;verifie_pere(inst18);
+LireMED inst19;verifie_pere(inst19);
+LireMEDfile inst20;verifie_pere(inst20);
+Pb_MED inst21;verifie_pere(inst21);
+Pbc_MED inst22;verifie_pere(inst22);
+Read_MED_For_Testing_No_Verify_Option inst23;verifie_pere(inst23);
+ScatterMED inst24;verifie_pere(inst24);
 }
