@@ -24,6 +24,7 @@
 #include <LecFicDiffuse_JDD.h>
 #include <LecFicDistribue.h>
 #include <LecFicDistribueBin.h>
+#include <Lecture_Table.h>
 #include <Lire.h>
 #include <Lire_Fichier.h>
 #include <Lire_Fichier_Bin.h>
@@ -61,19 +62,20 @@ LecFicDiffuseBin inst18;verifie_pere(inst18);
 LecFicDiffuse_JDD inst19;verifie_pere(inst19);
 LecFicDistribue inst20;verifie_pere(inst20);
 LecFicDistribueBin inst21;verifie_pere(inst21);
-Lire inst22;verifie_pere(inst22);
-Lire_Fichier inst23;verifie_pere(inst23);
-Lire_Fichier_Bin inst24;verifie_pere(inst24);
-Motcle inst25;verifie_pere(inst25);
-Motcles inst26;verifie_pere(inst26);
-Nom inst27;verifie_pere(inst27);
-Noms inst28;verifie_pere(inst28);
-Objet_a_lire inst29;verifie_pere(inst29);
-Read_unsupported_ASCII_file_from_ICEM inst30;verifie_pere(inst30);
-SFichier inst31;verifie_pere(inst31);
-SFichierBin inst32;verifie_pere(inst32);
-System inst33;verifie_pere(inst33);
-liste inst34;verifie_pere(inst34);
-ptrParam inst35;verifie_pere(inst35);
-vect_impl inst36;verifie_pere(inst36);
+Lecture_Table inst22;verifie_pere(inst22);
+Lire inst23;verifie_pere(inst23);
+Lire_Fichier inst24;verifie_pere(inst24);
+Lire_Fichier_Bin inst25;verifie_pere(inst25);
+Motcle inst26;verifie_pere(inst26);
+Motcles inst27;verifie_pere(inst27);
+Nom inst28;verifie_pere(inst28);
+Noms inst29;verifie_pere(inst29);
+Objet_a_lire inst30;verifie_pere(inst30);
+Read_unsupported_ASCII_file_from_ICEM inst31;verifie_pere(inst31);
+SFichier inst32;verifie_pere(inst32);
+SFichierBin inst33;verifie_pere(inst33);
+System inst34;verifie_pere(inst34);
+liste inst35;verifie_pere(inst35);
+ptrParam inst36;verifie_pere(inst36);
+vect_impl inst37;verifie_pere(inst37);
 }
